--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+1.01 - 2009-08-11
+
+* Fix breakage under Mouse due to Moose references
+* New Config::GitLike::Git module for loading config
+  files from the git locations
+* various cleanups of Makefile.PL
+* remove extraneous dep Regexp::Common
+
 1.00 - 2009-07-08
 
 * Initial release
