Checking in changes prior to tagging of version 1.02.  Changelog diff is:
diff --git a/Changes b/Changes
index 0974748..773278e 100644
--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
-1.02 - UNRELEASED
+1.02 - 2009-08-19

 * Bugfixes and extra tests for escaped \ and " in subsections (sunnavy)
+* win32 fixes (sunnavy)
+* auto-escape \ and " in subsections on set (sunnavy)

 1.01 - 2009-08-11

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
-1.02 - UNRELEASED
+1.02 - 2009-08-19
 
 * Bugfixes and extra tests for escaped \ and " in subsections (sunnavy)
+* win32 fixes (sunnavy)
+* auto-escape \ and " in subsections on set (sunnavy)
 
 1.01 - 2009-08-11
 
