--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+1.03 - 2010-01-03
+
+*  Filter without replace_all should only replace the _first_ match (alexmv)
+*  Having a matching filter with multiple and not replace_all does mean
+   replacement (alexmv)
+*  Fix a test that failed because multiple now works, and we're too smart
+   (alexmv)
+*  Fix for when ->set_multiple called with no arguments (alexmv)
+
 1.02 - 2009-08-19
 
 * Bugfixes and extra tests for escaped \ and " in subsections (sunnavy)
