--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+1.10 2012-11-07
+
+* Provide and API got accessing the original key that a value was set
+  with, in a case-preserving way.  If the case of the key in a file
+  matters, it is now possible to determine.
+* The 'name' value passed to the 'callback' parameter is now no longer
+  forced to lower-case, as a consequence.
+
 1.09 2012-08-10
 
 * Multiple bug fixes concerning filters, including empty filters,
