--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.11 2013-08-04
+
+* Switch from the deprecated Any::Moose to Moo
+
 1.10 2012-11-07
 
 * Provide and API got accessing the original key that a value was set
