--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for perl module Config::GitLike
 
+1.18 2020-03-12
+ - Return a more correct `dir_file` for Config::GitLike::Git; this
+   change is not backwards-compatible, but matches behavior to existing
+   documentation and expectation.
+
 1.17 2017-07-16
  - Read and write files with non-UNIX-newlines
  - Filter multiple values correctly when using `get_regexp`
